--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-color: #818181; /* fondo suave gris-azulado */
+    background-color: #7969dca6;
     color: #333;
   }
   
