--- a/src/styles/ResultadoClima.module.css
+++ b/src/styles/ResultadoClima.module.css
@@ -52,3 +52,19 @@
   height: 64px;
   margin: 0.5rem 0;
 }
+
+@media screen and (max-width: 450px) {
+
+  .resultadoClima h2{
+    font-size: 1.2rem;
+}
+
+.resultadoClima p{
+  font-size: 0.8rem;
+}
+
+.dia h3{
+  font-size: 1rem;
+}
+
+}
